client/src/assets/css/meals.css
.mealsContainer {
    height: 100%;
    width: 100%;
    margin: 0;
    text-align: center;
    font-size: 1rem;
    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color: white;
}

.mealsMainArea {
    height: 80%;
    width: 100%;
    margin: 0;
    overflow-y: scroll;
}

.mealConfirmContainer {
    height: 20%;
    width: 100%;
    position: relative;
    box-sizing: border-box;
}

.mealsItem {
    height: 40%;
    width: 100%;
    position: relative;
    box-sizing: border-box;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.mealsShadowArea {
    height: 70%;
    width: 100%;
    position: absolute;
    bottom: 0%;
    background: linear-gradient(to top, rgba(0, 0, 0, .7), rgba(0, 0, 0, 0));
    text-shadow: 2px 2px 2px black;
}

.mealsText {
    font-size: 1.5rem;
    position: absolute;
    white-space: pre-wrap;
    width: 85%;
    font-weight: bold;
    bottom: 0%;
    padding: 0 0 5px 5px;
}

.mealsCancel {
    color: #26a69a;
    position: absolute;
    bottom: 5%;
    right: 5%;
    font-weight: bolder;
    font-size: 2rem;
}

.detailsContainer {
    height: 100%;
    width: 100%;
    margin: 0;
    text-align: center;
    font-size: 1rem;
    position: absolute;
    z-index: 10;
    top: 0;
    left: 0;
    font-family: 'Oxygen', cursive;
    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color: white;
}

.detailsTime {
    margin-bottom: 6%;
}

.detailsMainArea {
    height: 80%;
    width: 100%;
    margin: 0;
    position: absolute;
    top: 10%;
    overflow-y: scroll;
}

.detailsMainArea > h3, h5, div {
    text-shadow: 1px 2px 2px black;
}

div.detailsIngredientsList > ul.collection,
div.detailsInstructionsList > ul.collection {
    margin-top: 11vh;
}

.detailsImg {
    width: 100%;
    border: 1px solid black;
}

.detailsIngredientsHead, .detailsInstructionsHead, .detailsNutritionHead {
    width: 33.3%;
    font-size: 1.5rem;
    float: left;
    box-sizing: border-box;
    border: 1px solid #e0e0e0;
    padding: 2% 0;
    background-color: #757575e7;
}

.detailsSelectedList {
    background-color: #F75211;
}

.detailsIngredientsList, .detailsInstructionsList, .detailsNutritionList {
    text-align: left;
    font-size: 1.2rem;
}

.detailsInstructionsList, .detailsNutritionList {
    display: none;
}

.collection > .detailsListItem.collection-item {
    background-color: #757575e7;
}

.mealsFooter {
    bottom: 0;
}

.mealsMainArea .mealConfirmContainer {
    margin: 0;
    background: #191717a8;
}

.confirmTextArea {
    margin-top: 8%;
}

.confirmTextArea > div {
    text-shadow: 2px 2px 2px black;
}

.confirmHead {
    font-size: 1.4rem;
    font-weight: bolder;
}

.confirmButton {
    width: 70%;
    height: 50%;
    padding: 0;
    box-sizing: border-box;
}

.confirmCheck {
    margin-top: 11%;
}

.mealCompleteGrey {
    filter: grayscale(100%);
}

.mealIncomplete {
    filter: grayscale(0%);
}

@media all and (min-width: 600px) {
    .mealsContainer {
        width: 60%;
    }
    
    .mealsContainer > .headerBar,
    .mealsContainer > .mealsMainArea > .detailsContainer > .headerBar {
        height: 10%;
    }

    .mealsContainer > .footer {
        height: 10%;
        position: relative;
        overflow: hidden;
    }

    .mealsContainer > .mealsMainArea > .mealConfirmContainer > .confirmTextArea {
        margin-top: 1%;
        width: 100%;
        margin-left: 0;
        left: 0;
        right: 0;
    }

    .mealsContainer > .mealsMainArea {
        display: flex;
        flex-wrap: wrap;
    }

    .mealsContainer > .mealsMainArea > .mealConfirmContainer,
    .mealsContainer > .mealsMainArea > .mealsItem {
        width: 32.3%;
        border: 1px solid black;
        margin: .5% .5%;       
    }

    .mealsContainer > .mealsMainArea > .mealConfirmContainer {
        height: 50%;
        align-items: center;
    }

    .mealsContainer > .mealsMainArea > .mealConfirmContainer > .confirmTextArea > div {
        font-size: .7rem;
    }

    .mealsContainer > .mealsMainArea > .mealConfirmContainer > .col.s3 {
        width: 0;
        margin-right: 3.5vw;
        margin-left: 0;
        left: 0;
        right: 0;
    } 

    .confirmButton {
        width: 100vw;
        height: 5.5vh;
        display: flex;
    }

    .confirmButton > .confirmCheck {
        margin-top: 0;
        font-size: 1.5rem !important;
    }

    .mealsText {
        font-size: .7rem;
    }

    .mealsItem {
        height: 50%;
    }

    .mealsCancel {
        font-size: 1rem;
        bottom: 0%;
        right: 3%;
    }

    .detailsContainer {
        width: 56%;
        left: 22%;
    }

    .detailsMainArea > img {
        width: 60%;
        margin-top: 5vh;
        border-radius: 2%;
    }

    .detailsName {
        font-size: 1.92rem;
    }

    .detailsTime {
        font-size: 1.2rem;
    }

    .detailsIngredientsList > .collection,
    .detailsInstructionsList > .collection,
    .detailsNutritionList > .collection {
        flex-direction: column;
    }

    .detailsContainer > .headerBar,
    .detailsContainer > .footer {
        width: 56%;
    }

    .detailsContainer > .loaderModal {
        left: -40%;
    }
    
}

